--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,42 +3,45 @@ name: Build and Deploy to ECS via CodePipeline
 on:
   push:
     branches:
-      - main 
+      - main   # change if your branch is different
 
 permissions:
-  id-token: write   # Required for OIDC
-  contents: read    # Allows cloning repo
+  id-token: write   # required for OIDC
+  contents: read
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout the repository
       - name: Checkout source
         uses: actions/checkout@v4
 
-      # Configure AWS credentials via OIDC
+      # Configure AWS creds via OIDC Assume Role
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}   # stored in repo secrets
           aws-region: eu-central-1
 
-      # Login to Amazon ECR
+      # Log in to Amazon ECR
       - name: Login to Amazon ECR
+        id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      # Build and push Docker image using docker/build-push-action
-      - name: Build and Push Docker image to ECR
-        uses: docker/build-push-action@v5
-        with:
-          context: .                          
-          file: ./Dockerfile                  
-          push: true
-          tags: ${{ secrets.ECR_REPOSITORY_URI }}:latest
+      # Build, tag and push image
+      - name: Build and Push Docker image
+        run: |
+          IMAGE_TAG=latest
+          ECR_REPO_URI=${{ secrets.ECR_REPOSITORY_URI }}
 
-      # Trigger CodePipeline
+          echo "Building Docker image..."
+          docker build -t $ECR_REPO_URI:$IMAGE_TAG .
+
+          echo "Pushing to ECR..."
+          docker push $ECR_REPO_URI:$IMAGE_TAG
+
+      # Trigger CodePipeline (deploys ECS with new image)
       - name: Trigger CodePipeline
         run: |
           aws codepipeline start-pipeline-execution \
