--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy to ECS via CodePipeline
+name: Build and Deploy to ECS via CodePipeline (Blue/Green)
 
 on:
   push:
@@ -6,8 +6,8 @@ on:
       - main
 
 permissions:
-  id-token: write    
-  contents: read  
+  id-token: write
+  contents: read
 
 jobs:
   deploy:
@@ -17,40 +17,35 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v4
 
-      # Configure AWS credentials using OIDC
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
           aws-region: eu-central-1
 
-      # Log in to Amazon ECR
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v2
 
-      # Build and push Docker image
       - name: Build and Push Docker image
         run: |
           IMAGE_TAG=latest
           ECR_REPO_URI=${{ secrets.ECR_REPOSITORY_URI }}
           echo "Building Docker image..."
           docker build -t $ECR_REPO_URI:$IMAGE_TAG .
-          echo "Pushing Docker image..."
           docker push $ECR_REPO_URI:$IMAGE_TAG
+          echo "IMAGE_URI=$ECR_REPO_URI:$IMAGE_TAG" >> $GITHUB_ENV
 
-      # Create imagedefinitions.json
-      - name: Create imagedefinitions.json
+      - name: Prepare deployment artifacts
         run: |
-          CONTAINER_NAME="${{ secrets.ECS_CONTAINER_NAME }}"
-          IMAGE_URI="${{ secrets.ECR_REPOSITORY_URI }}:latest"
-          echo "[{\"name\":\"$CONTAINER_NAME\",\"imageUri\":\"$IMAGE_URI\"}]" > imagedefinitions.json
+          # Replace image URI inside taskdef.json
+          sed -i "s|REPLACE_IMAGE_URI|${IMAGE_URI}|g" taskdef.json
 
-      # Upload imagedefinitions.json to S3 (CodePipeline artifact bucket)
-      - name: Upload imagedefinitions.json to S3
-        run: |
-          aws s3 cp imagedefinitions.json s3://${{ secrets.ARTIFACT_BUCKET }}/imagedefinitions.json
+          # Zip taskdef + appspec
+          zip deploy.zip appspec.yaml taskdef.json
 
-      # Trigger CodePipeline
+          # Upload to S3 (artifact bucket)
+          aws s3 cp deploy.zip s3://${{ secrets.ARTIFACT_BUCKET }}/deploy.zip
+
       - name: Trigger CodePipeline
         run: |
           aws codepipeline start-pipeline-execution --name ${{ secrets.CODEPIPELINE_NAME }}
