--- a/appspec.yaml
+++ b/appspec.yaml
@@ -3,7 +3,7 @@ Resources:
   - TargetService:
       Type: AWS::ECS::Service
       Properties:
-        TaskDefinition: "taskdef.json"
+        TaskDefinition: "taskdef-rendered.json"
         LoadBalancerInfo:
-          ContainerName: "your-container-name"
+          ContainerName: "ecs-stack-container"
           ContainerPort: 80
