--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,45 +7,68 @@ on:
 
 permissions:
   id-token: write
-  contents: read
+  contents: write
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
+      # 1. Checkout repo
       - name: Checkout source
         uses: actions/checkout@v4
 
+      # 2. Configure AWS credentials (OIDC)
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
           aws-region: eu-central-1
 
+      # 3. Log in to Amazon ECR
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Build and Push Docker image
+      # 4. Build Docker image
+      - name: Build Docker image
         run: |
           IMAGE_TAG=latest
           ECR_REPO_URI=${{ secrets.ECR_REPOSITORY_URI }}
-          echo "Building Docker image..."
           docker build -t $ECR_REPO_URI:$IMAGE_TAG .
           docker push $ECR_REPO_URI:$IMAGE_TAG
-          echo "IMAGE_URI=$ECR_REPO_URI:$IMAGE_TAG" >> $GITHUB_ENV
 
-      - name: Prepare deployment artifacts
+      # 5. Render task definition with new image URI
+      - name: Generate ECS task definition
         run: |
-          # Replace image URI inside taskdef.json
-          sed -i "s|REPLACE_IMAGE_URI|${IMAGE_URI}|g" taskdef.json
+          IMAGE_URI=${{ secrets.ECR_REPOSITORY_URI }}:latest
+          CONTAINER_NAME=${{ secrets.ECS_CONTAINER_NAME }}
 
-          # Zip taskdef + appspec
-          zip deploy.zip appspec.yaml taskdef.json
+          jq --arg image "$IMAGE_URI" --arg name "$CONTAINER_NAME" \
+            '.containerDefinitions[0].image=$image | .containerDefinitions[0].name=$name' \
+            taskdef.json > taskdef-rendered.json
 
-          # Upload to S3 (artifact bucket)
-          aws s3 cp deploy.zip s3://${{ secrets.ARTIFACT_BUCKET }}/deploy.zip
+      # 6. Render appspec.yml for CodeDeploy
+      - name: Generate AppSpec file
+        run: |
+          cat > appspec.yml <<EOF
+          version: 1
+          Resources:
+            - TargetService:
+                Type: AWS::ECS::Service
+                Properties:
+                  TaskDefinition: taskdef-rendered.json
+                  LoadBalancerInfo:
+                    ContainerName: ${{ secrets.ECS_CONTAINER_NAME }}
+                    ContainerPort: 80
+          EOF
 
+      # 7. Upload artifacts to S3 (CodePipeline will use this)
+      - name: Upload AppSpec & TaskDef to S3
+        run: |
+          aws s3 cp taskdef-rendered.json s3://${{ secrets.ARTIFACT_BUCKET }}/taskdef-rendered.json
+          aws s3 cp appspec.yml s3://${{ secrets.ARTIFACT_BUCKET }}/appspec.yml
+
+      # 8. Trigger CodePipeline
       - name: Trigger CodePipeline
         run: |
           aws codepipeline start-pipeline-execution --name ${{ secrets.CODEPIPELINE_NAME }}
