--- a/appspec.yaml
+++ b/appspec.yaml
@@ -1,9 +1,9 @@
-version: 1
+version: 0.0
 Resources:
   - TargetService:
       Type: AWS::ECS::Service
       Properties:
-        TaskDefinition: "taskdef-rendered.json"
+        TaskDefinition: "<TASK_DEFINITION>"
         LoadBalancerInfo:
           ContainerName: "ecs-stack-container"
-          ContainerPort: 80
+          ContainerPort: 8080
