--- a/appspec.yaml
+++ b/appspec.yaml
@@ -5,5 +5,5 @@ Resources:
       Properties:
         TaskDefinition: "<TASK_DEFINITION>"
         LoadBalancerInfo:
-          ContainerName: "ecs-stack-container"
+          ContainerName: "ecs-lab-container"
           ContainerPort: 8080
